--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Cmartin28.GitHub.io by cmartin28</title>
+    <Cynthia´s Photographies>Cmartin28.GitHub.io by cmartin28</title>
   </head>
 
   <body>
-    <header>
+    <header> 
       <div class="inner">
         <h1>Cmartin28.GitHub.io</h1>
         <h2>On this page you will enjoy different pictures that I have taken in different places.</h2>
